apply plugin: 'java'

sourceCompatibility = 11.0

group 'com.tollge.modules'

dependencies {
    annotationProcessor 'org.projectlombok:lombok:' + lombok_version
    compile 'com.tollge:tollge:' + tollge_version

    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile group: 'io.vertx', name: 'vertx-unit', version: vertx_version
}